[package]
name = "actix_web_learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.1"
env_logger = "0.9.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = "1.0.143"
serde_qs = "0.10.1"
serde_derive = "1.0.143"
serde_json = "1.0"